# ECE484_MP_FA25

src/mp3/: CMakeLists.txt  package.xml
src/mp3/src/: lidar_processing.py  maze.py  particle_filter.py
src/mp3/tools/: tune_particle_filter.py
src/mp3/urdf/: polaris.urdf
src/mp3/worlds/: mp3_eceb.world  mp3_empty.world  mp3_highbay.world
